--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,12 @@
-// fonts
-$font-main: "Roboto", sans-serif;
+// Fonts
+$font-main: 'Roboto', sans-serif;
+$font-titles: 'Roboto Slab', serif;
 
 // colors
-$color-white: #f3f4f5;
-$color-secondary: #999;
+$primary-color: #27201a;
+$secondary-color: #433931;
+$grey: #76695d;
+$light-color: #ffffff;
+$dark-pink: #8b5e47;
+$pink: #d29b7e;
+$shadows: rgba(0, 0, 0, 0.5);
