--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,3 +1,5 @@
-<header class="page__header">
-  <h1>Sherlock TV</h1>
+<header class="page-header">
+  <div class="header">
+    <h1 class="header__title">Sherlock TV</h1>
+  </div>
 </header>
