--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,5 @@
-// body {
-//   padding: 2rem;
-//   height: 100vh;
-
-//     $color-white;
-//   font-family: $font-main;
-// }
+html {
+  font-family: $font-main;
+  font-size: 16px;
+  color: $primary-color;
+}
