--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import 'core/variables';
+@import 'core/mixins';
 @import 'core/reset';
 @import 'layout/page';
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/footer';
-@import 'pages/index';
