--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -22,6 +22,7 @@
           Buscar
         </button>
       </div>
+      <h3 class="search-result hidden">Resultado de la búsqueda</h3>
       <ul class="series__list"></ul>
     </section>
   </div>
