--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,8 +1,10 @@
 .page__footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
+  // position: fixed;
+  // left: 0;
+  // bottom: 0;
+  width: 100%;
+  height: 80px;
   padding: 1rem;
-  color: $secondary-color;
+  background-color: $grey;
+  color: $light-color;
 }
