--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -2,7 +2,7 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  //   flex-wrap: wrap;
 }
 .serie-name {
   font-size: 1.3rem;
