--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -47,7 +47,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $light-color;
-  // overflow: scroll;
+  overflow: scroll;
 }
 
 .series-search-title {
