--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -1,20 +1,28 @@
 .serie {
+  margin-top: 15px;
   padding: 10px;
   display: flex;
+  width: 100%;
+  justify-content: center;
   flex-direction: column;
-  //   flex-wrap: wrap;
+  align-items: center;
 }
 .serie-name {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin-bottom: 15px;
   color: $secondary-color;
   text-align: center;
 }
 
-.serie-img-container {
+.serie-img {
   width: 210px;
   height: 320px;
 }
-.serie-img {
-  width: 100%;
+
+// CAMBIOS AL SELECCIONAR COMO FAVORITA UNA SERIE
+
+.fav {
+  background-color: $pink;
+  color: $light-color;
+  box-shadow: 0 2px 4px 0 $shadows;
 }
