--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -26,8 +26,9 @@
             Buscar
           </button>
         </div>
-        <h3 class="search-result hidden">Resultado de la búsqueda</h3>
-        <ul class="series__list"></ul>
+        <div class="search-results">
+          <ul class="series__list"></ul>
+        </div>
       </div>
     </section>
   </div>
