Change search function

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -27,6 +27,7 @@
           </button>
         </div>
         <div class="search-results">
+          <p class="search-results-text hidden">Resultado de la búsqueda</p>
           <ul class="series__list"></ul>
         </div>
       </div>
