--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,10 @@
 <header class="page-header">
   <div class="header">
     <h1 class="header__title">Sherlock TV</h1>
+
+    <div class="sections-tittles">
+      <h2 class="favorite__series-title">Tus series favoritas</h2>
+      <h2 class="series-search-title">Buscador de series</h2>
+    </div>
   </div>
 </header>
