--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,6 +3,7 @@
   margin-bottom: 3rem;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
   padding: 30px;
   &__title {
