--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -3,8 +3,8 @@
   max-width: 1200px;
   margin: auto;
   padding: 15px;
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
   background-color: $light-color;
 }
 
@@ -12,12 +12,17 @@
   background-image: url('https://cdn.pixabay.com/photo/2016/01/19/16/49/old-tv-1149416_1280.jpg');
 }
 
+.sections-tittles {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 // SECCIÓN DE FAVORITOS
 
 .favorite__series-title {
   font-size: 1.95rem;
   margin-bottom: 25px;
-  color: $secondary-color;
+  color: $pink;
   border-right: 2px solid $dark-pink;
   border-left: 2px solid $dark-pink;
   padding: 15px;
@@ -29,30 +34,27 @@
 .favorite__series-section {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 500px;
-  padding: 20px;
-  height: 100vh;
+  align-items: flex-start;
+  padding: 50px;
   text-align: justify;
+  // border-top: 3px solid $dark-pink;
 }
 
 // SECCIÓN DE BÚSQUEDA
 
 .series-search-section {
-  width: 500px;
   padding: 20px;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   background-color: $light-color;
-  overflow: scroll;
 }
 
 .series-search-title {
   font-size: 1.95rem;
   margin-bottom: 25px;
-  color: $secondary-color;
+  color: $pink;
   padding: 15px;
   border-left: 2px solid $dark-pink;
   border-right: 2px solid $dark-pink;
@@ -73,6 +75,12 @@
   &:focus {
     outline: none;
   }
+}
+.label-input {
+  font-size: 1.7rem;
+  color: $dark-pink;
+  font-family: $font-titles;
+  margin-bottom: 25px;
 }
 
 .btn__search {
