Change button submit

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -3,8 +3,7 @@
   max-width: 1200px;
   margin: auto;
   padding: 15px;
-  // display: flex;
-  // justify-content: center;
+
   background-color: $light-color;
 }
 
@@ -29,14 +28,31 @@
 }
 .no-series {
   font-family: $font-main;
+  font-size: 1.5rem;
   color: $grey;
+  text-align: center;
+  &-text {
+    margin: 20px 0;
+    font-size: 1.1rem;
+    color: $dark-pink;
+    text-align: center;
+  }
+  &-img-container {
+    width: 500px;
+    height: 500px;
+    margin-top: 30px;
+  }
+  &-img {
+    width: 100%;
+  }
 }
 .favorite__series-section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 50px;
+  padding: 30px;
   text-align: justify;
+
   // border-top: 3px solid $dark-pink;
 }
 
@@ -46,6 +62,7 @@
   padding: 20px;
   height: 100vh;
   display: flex;
+  padding: 10px 30px;
   flex-direction: column;
   align-items: flex-start;
   background-color: $light-color;
@@ -102,6 +119,7 @@
   }
 }
 
+// Icono lupa
 .fa-search {
   font-size: 1rem;
 }
@@ -111,4 +129,10 @@
   font-size: 1.5rem;
   color: $dark-pink;
   font-weight: 400;
+}
+
+.ul-results {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
