--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -5,8 +5,11 @@
     <div class="series-section-container">
       <section class="favorite__series-section">
         <div class="js-list-fav hidden">
-          <p class="no-series">Aún no has añadido ninguna serie a tu lista</p>
-
+          <h3 class="no-series">Aún no has añadido ninguna serie a tu lista</h3>
+          <p class="no-series-text">Para hacerlo, busca la serie que más te guste y clica en ella.</p>
+<div class="no-series-img-container">
+  <img class="no-series-img" src="./assets/images/no-series-img.gif" alt="Dibujo de televisión">
+</div>
           <ul>
             <li class="favorite__series">
               <h3 class="favorite__series-name"></h3>
@@ -29,7 +32,10 @@
         </div>
         <div class="search-results">
           <p class="search-results-text hidden">Resultado de la búsqueda</p>
+        <div class="ul-results">
           <ul class="series__list"></ul>
+        </div>
+          
         </div>
       </div>
       </section>
