--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,10 @@
-.header {
+.page-header {
   background-color: $primary-color;
+}
+.header {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
   margin-bottom: 3rem;
   display: flex;
   justify-content: center;
@@ -8,7 +13,7 @@
   padding: 30px;
   &__title {
     color: $light-color;
-    font-size: 3rem;
+    font-size: 4rem;
     font-family: $font-titles;
   }
 }
