--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -38,8 +38,8 @@
     text-align: center;
   }
   &-img-container {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     margin-top: 30px;
   }
   &-img {
@@ -52,19 +52,14 @@
   align-items: flex-start;
   padding: 30px;
   text-align: justify;
-
-  // border-top: 3px solid $dark-pink;
 }
 
 // SECCIÓN DE BÚSQUEDA
 
 .series-search-section {
   padding: 20px;
-  height: 100vh;
-  display: flex;
+  height: 90vh;
   padding: 10px 30px;
-  flex-direction: column;
-  align-items: flex-start;
   background-color: $light-color;
 }
 
@@ -126,7 +121,7 @@
 .fa-search {
   font-size: 1rem;
 }
-
+//Párrafo inicial a los resultados
 .search-results-text {
   margin: 20px 20px;
   font-size: 1.5rem;
@@ -134,8 +129,7 @@
   font-weight: 400;
 }
 
-.ul-results {
-  display: flex;
-  flex-direction: column;
+.series-list {
+  display: flex !important;
   flex-wrap: wrap;
 }
