--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -18,6 +18,7 @@
 .serie-img {
   width: 210px;
   height: 320px;
+  border-radius: 10px;
 }
 
 // CAMBIOS AL SELECCIONAR COMO FAVORITA UNA SERIE
@@ -26,4 +27,5 @@
   background-color: $pink;
   color: $light-color;
   box-shadow: 0 2px 4px 0 $shadows;
+  border-radius: 15px;
 }
