--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -8,23 +8,23 @@ html {
   display: none;
 }
 
-/* Hide scrollbar for Chrome, Safari, and Opera */
-html::-webkit-scrollbar {
-  display: none;
-}
+// /* Hide scrollbar for Chrome, Safari, and Opera */
+// html::-webkit-scrollbar {
+//   display: none;
+// }
 
-/* Hide scrollbar for IE and Edge */
-html {
-  -ms-overflow-style: none;
-}
+// /* Hide scrollbar for IE and Edge */
+// html {
+//   -ms-overflow-style: none;
+// }
 
-/* Remove Scrollbar Firefox Fix, suggested in the comments */
-html {
-  overflow: auto;
-  scrollbar-width: none;
-}
+// /* Remove Scrollbar Firefox Fix, suggested in the comments */
+// html {
+//   overflow: auto;
+//   scrollbar-width: none;
+// }
 
-body {
-  overflow-y: hidden; /* Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
-}
+// body {
+//   overflow-y: hidden; /* Hide vertical scrollbar */
+//   overflow-x: hidden; /* Hide horizontal scrollbar */
+// }
