--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -5,11 +5,15 @@
     <div class="series-section-container">
       <section class="favorite__series-section">
         <div class="js-list-fav hidden">
-          <h3 class="no-series">Aún no has añadido ninguna serie a tu lista</h3>
-          <p class="no-series-text">Para hacerlo, busca la serie que más te guste y clica en ella.</p>
+          <div class="no-series-container hidden">
+            <h3 class="no-series">Aún no has añadido ninguna serie a tu lista</h3>
+            <p class="no-series-text">Para hacerlo, busca la serie que más te guste y clica en ella.</p>
+         
+          
           <div class="no-series-img-container">
             <img class="no-series-img" src="./assets/images/no-serie-img2.png" alt="Dibujo de televisión">
           </div>
+        </div>
           <div class="series__list-fav">
  <!-- Aquí se muestra el listado de series favoritas -->
           </div>
