--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -2,7 +2,6 @@
   margin-top: 15px;
   padding: 10px;
   display: flex;
-
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -28,4 +27,50 @@
   color: $light-color;
   box-shadow: 0 2px 4px 0 $shadows;
   border-radius: 15px;
+}
+
+// SERIES EN SECCIÓN DE FAVORITOS
+
+.serie-fav {
+  margin-top: 15px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: $pink;
+  color: $light-color;
+  box-shadow: 0 2px 4px 0 $shadows;
+  border-radius: 15px;
+}
+.serie-name-fav {
+  font-size: 1rem;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.btn-reset {
+  border: 1px solid $secondary-color;
+  border-radius: 10px;
+  height: 20px;
+  width: 20px;
+  font-family: sans-serif;
+  background-color: #ebccbc;
+  color: $primary-color;
+  box-shadow: 0 2px 4px 0 $shadows;
+  margin-bottom: 10px;
+  transition: color background-color border ease 0.8s;
+  &:hover {
+    color: $light-color;
+    background-color: $dark-pink;
+    box-shadow: 0 2px 4px 0 $shadows;
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
+.serie-img-fav {
+  width: 160px;
+  height: 270px;
+  border-radius: 10px;
 }
