--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -9,7 +9,7 @@
 }
 
 .page__main {
-  background-image: url('https://cdn.pixabay.com/photo/2016/01/19/16/49/old-tv-1149416_1280.jpg');
+  background-image: url('https://s.yimg.com/uu/api/res/1.2/TMEOEDhleeoZfzGU1sSvsw--~B/aD01NTI7dz03MzY7c209MTthcHBpZD15dGFjaHlvbg--/http://media.zenfs.com/en_US/News/BGR_News/d53ed2bb25291c7610ee942f5a7e334f.jpg');
 }
 
 .sections-tittles {
