--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -23,7 +23,7 @@
       <section class="series-search-section" >
         <div class="js-list-series hidden">
           <label for="search-input" class="label-input">Busca aquí tu serie y márcala si es tu favorita</label> <br><br>
-          <input id="search-input" type="text" placeholder="Sherlock" class="search js-search" />
+          <input id="search-input" type="text" placeholder="Sherlock" class="search js-search" required/>
           <button type="submit" class="btn__search">
             <i class="fas fa-search"></i>
             Buscar
