--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -21,13 +21,20 @@
 // SECCIÓN DE FAVORITOS
 
 .favorite__series-title {
-  font-size: 1.95rem;
+  font-size: 1.7rem;
   margin-bottom: 25px;
   color: $pink;
   border-right: 2px solid $dark-pink;
   border-left: 2px solid $dark-pink;
   padding: 15px;
   cursor: pointer;
+  transition: color box-shadow border-left border-right ease 0.8s;
+  &:hover {
+    color: $dark-pink;
+    box-shadow: 0 2px 4px 0 $shadows;
+
+    border-left: 2px solid $pink;
+  }
 }
 
 //Cuando no hay ninguna serie en favoritos
@@ -67,13 +74,19 @@
 // SECCIÓN DE BÚSQUEDA
 
 .series-search-title {
-  font-size: 1.95rem;
+  font-size: 1.7rem;
   margin-bottom: 25px;
   color: $pink;
   padding: 15px;
   border-left: 2px solid $dark-pink;
   border-right: 2px solid $dark-pink;
   cursor: pointer;
+  transition: color box-shadow border-right ease 0.8s;
+  &:hover {
+    color: $dark-pink;
+    box-shadow: 0 2px 4px 0 $shadows;
+    border-right: 2px solid $pink;
+  }
 }
 
 .series-search-section {
@@ -136,9 +149,9 @@
 }
 //Párrafo inicial a los resultados
 .search-results-text {
-  margin: 20px 20px;
-  font-size: 1.5rem;
-  color: $dark-pink;
+  margin: 20px 0px;
+  font-size: 1.3rem;
+  color: black;
   font-weight: 400;
 }
 
