Add reset all favourites series

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -59,16 +59,14 @@
   }
 }
 .favorite__series-section {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   padding: 30px;
-  text-align: justify;
 }
 
 .series__list-fav {
   display: flex;
   flex-wrap: wrap;
+
+  padding-top: 38px;
 }
 
 // SECCIÓN DE BÚSQUEDA
