--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -1,3 +1,31 @@
+.btn-reset-all {
+  align-self: center;
+  position: absolute;
+  bottom: 0;
+  font-family: &primary-font;
+  font-size: 0.7rem;
+  padding: 5px;
+  margin: 15px;
+  position: fixed;
+  background-color: $pink;
+  color: black;
+  border: 1px solid $pink;
+  border-radius: 5px;
+
+  padding: 4px;
+  cursor: pointer;
+
+  transition: background-color box-shadow border color ease 0.8s;
+  &:hover {
+    background-color: red;
+    box-shadow: 0 2px 4px 0 $shadows;
+    color: white;
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
 .serie {
   margin: 15px;
   display: flex;
@@ -66,7 +94,7 @@
   min-height: 50px;
 }
 
-.btn-reset {
+.btn-delete {
   border: 1px solid $secondary-color;
   border-radius: 8px;
   height: 16px;
@@ -77,6 +105,7 @@
   box-shadow: 0 2px 4px 0 $shadows;
   margin-bottom: 10px;
   font-size: 0.5rem;
+
   transition: color background-color border ease 0.8s;
   &:hover {
     color: $light-color;
