--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -73,8 +73,8 @@
   // padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
+  // justify-content: center;
   background-color: $dark-pink;
   color: $light-color;
   box-shadow: 0 2px 4px 0 $shadows;
@@ -96,12 +96,16 @@
 
 .btn-delete {
   border: 1px solid $secondary-color;
-  border-radius: 8px;
-  height: 16px;
-  width: 16px;
+  // border-radius: 6px;
+  height: 35px;
+  width: 25px;
+  border-top-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+
+  align-self: flex-end;
   font-family: sans-serif;
-  background-color: #ebccbc;
-  color: $primary-color;
+  background-color: #0e0e0e;
+  color: $light-color;
   box-shadow: 0 2px 4px 0 $shadows;
   margin-bottom: 10px;
   font-size: 0.5rem;
