Fix reset all button

--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -1,12 +1,12 @@
 .btn-reset-all {
   align-self: center;
-  position: absolute;
-  bottom: 0;
+
+  top: 0;
   font-family: &primary-font;
   font-size: 0.7rem;
   padding: 5px;
   margin: 15px;
-  position: fixed;
+
   background-color: $pink;
   color: black;
   border: 1px solid $pink;
