--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,5 +1,10 @@
 <footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-  </small>
+  <div class="footer-wrapper">
+    <a href="#" title="Ir al incio"
+      ><img src="./assets/images/vhs-logo.png" alt="Logo vhs" class="vhs"
+    /></a>
+    <small>
+      Sherlock TV &copy; Todos los derechos reservados
+    </small>
+  </div>
 </footer>
