--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,10 +1,27 @@
 .page__footer {
-  // position: fixed;
-  // left: 0;
-  // bottom: 0;
   width: 100%;
   height: 80px;
   padding: 1rem;
   background-color: $grey;
   color: $light-color;
+}
+.footer-wrapper {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.vhs {
+  width: 30px;
+  height: 30px;
+  transition: border ease 0.8s;
+
+  &:hover {
+    border: 1px solid red;
+    border-radius: 5px;
+  }
 }
