--- a/src/scss/layout/_series_list.scss
+++ b/src/scss/layout/_series_list.scss
@@ -1,20 +1,17 @@
+// BOTÓN PARA BORRAR TODAS LAS SERIES
 .btn-reset-all {
   align-self: center;
-
   top: 0;
   font-family: &primary-font;
   font-size: 0.7rem;
   padding: 5px;
   margin: 15px;
-
   background-color: $pink;
   color: black;
   border: 1px solid $pink;
   border-radius: 5px;
-
   padding: 4px;
   cursor: pointer;
-
   transition: background-color box-shadow border color ease 0.8s;
   &:hover {
     background-color: red;
@@ -26,6 +23,7 @@
   }
 }
 
+// TARJETAS DE SERIES
 .serie {
   margin: 15px;
   display: flex;
@@ -57,24 +55,12 @@
   border-bottom-left-radius: 10px;
 }
 
-// CAMBIOS AL SELECCIONAR COMO FAVORITA UNA SERIE
-
-.fav {
-  background-color: $red;
-  color: $light-color;
-  box-shadow: 0 2px 4px 0 $shadows;
-  border-radius: 15px;
-}
-
 // SERIES EN SECCIÓN DE FAVORITOS
 
 .serie-fav {
   margin: 15px;
-  // padding: 10px;
   display: flex;
   flex-direction: column;
-
-  // justify-content: center;
   background-color: $dark-pink;
   color: $light-color;
   box-shadow: 0 2px 4px 0 $shadows;
@@ -94,9 +80,18 @@
   min-height: 50px;
 }
 
+// CAMBIOS AL SELECCIONAR COMO FAVORITA UNA SERIE
+
+.fav {
+  background-color: $red;
+  color: $light-color;
+  box-shadow: 0 2px 4px 0 $shadows;
+  border-radius: 15px;
+}
+
 .btn-delete {
   border: 1px solid $secondary-color;
-  // border-radius: 6px;
+
   height: 35px;
   width: 25px;
   border-top-left-radius: 6px;
